--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
   <div id="app">
     <div class="sidenav">
       <section class="section">
-        <h1>云雷达4.21</h1>
-        <p >作者：&nbsp;&nbsp;随</p>
+        <h1>大罗村吃鸡GPS</h1>
+        <p >作者：&nbsp;&nbsp;3161699788</p>
         <!-- <div class="field is-grouped">
           <a class="button is-small">Button</a>
           <a class="button is-small">Button2</a>
